--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -305,7 +305,7 @@ The list displays the most recent build of each flavor.
 ---
 ## <a id="deploy"></a>Step 4: Deploy MicroBOSH ##
 
-1. In a terminal window, run `bosh micro deployment microbosh.yml` from your
+1. In a terminal window, run `bosh micro deployment manifest.yml` from your
 deployment directory to instruct MicroBOSH to use your manifest file.
 
     <pre class='terminal'>
@@ -364,5 +364,5 @@ If an error message displays that refers to your `access key signature`, check t
 
 If other error messages appear:
 
-* Check your `microbosh.yml` for errors.
+* Check your `manifest.yml` for errors.
 * Review your AWS configuration.
