--- a/deploying.html.md.erb
+++ b/deploying.html.md.erb
@@ -38,6 +38,7 @@ Task 10326 done
 +----------------+---------+---------------+-------------+
 </pre>
 
-Previous: [Uploading Releases](uploading-releases.html)
+---
+[Back to Table of Contents](toc.html#basic-deploy)
 
-[Back to Table of Contents](toc.html)
+Previous: [Uploading Releases](uploading-releases.html)
