--- a/s3-release-blobstore.html.md.erb
+++ b/s3-release-blobstore.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Setting up an S3 BOSH Release Blobstore
+title: Setting up an S3 Release Blobstore
 ---
 
 This topic is written for release maintainers and describes how to set up a S3 bucket for storing release artifacts.
