--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -2,7 +2,7 @@
 title: Index
 ---
 
-## Introduction
+## <a id="intro"></a> Introduction
 
  * [What is BOSH?](about.html)
     * [What problems does BOSH solve?](problems.html)
@@ -13,7 +13,7 @@ title: Index
  * [Terminology](terminology.html)
 
 ---
-## Installing MicroBOSH
+## <a id="install"></a> Installing MicroBOSH
 
  * [BOSH components](bosh-components.html)
  * [Boostrapping an environment / What is MicroBOSH?](bootstrap.html)
@@ -34,7 +34,7 @@ title: Index
     * Difference between Microbosh, BOSH, and multi-VM BOSH
 
 ---
-## Using BOSH to deploy software
+## <a id="basic-deploy"></a> Using BOSH to deploy software
 
  * [Basic workflow](basic-workflow.html)
     * [Deployment basics](deployment-basics.html)
@@ -59,7 +59,7 @@ title: Index
     * [vSphere](vsphere-cpi.html)
     * vCloud
 
-### Health Management of VMs and Processes
+### <a id="hm"></a> Health Management of VMs and Processes
 
  * [Monitoring](monitoring.html)
     * [Configuring Health Monitor](hm-config.html)
@@ -68,7 +68,7 @@ title: Index
  * Resurrector
  * (WIP) Snapshotting
 
-### VM Configuration (Looking inside a BOSH Deployment)
+### <a id="vm-config"></a> VM Configuration (Looking inside a BOSH Deployment)
 
  * [Structure of a BOSH VM](vm-struct.html)
     * [VM Configuration Locations](vm-config.html)
