--- a/vm-config.html.md.erb
+++ b/vm-config.html.md.erb
@@ -67,6 +67,9 @@ It's discouraged to modify or rely on the contents of this directory.
 
 * `/var/vcap/monit/monit.log`: Monit activity log. Includes information about starts, stops, restarts, etc. of release job processes monitored by Monit.
 
+---
+[Back to Table of Contents](toc.html#vm-config)
+
 Previous: [Structure of a BOSH VM](vm-struct.html)
 
 [1] VCAP stands for VMware Cloud Application Platform.
