--- a/vm-monit.html.md.erb
+++ b/vm-monit.html.md.erb
@@ -97,6 +97,7 @@ While debugging why certain process is failing it is usually useful to tell Moni
 
 See [Monit manual](http://mmonit.com/monit/documentation/monit.html) to learn more about Monit.
 
-Previous: [Monitoring](monitoring.html)
+---
+Next: [Manual repair with Cloud Check](cck.html)
 
-Next: [Using Cloud Check to repair deployments](cck.html)
+Previous: [Monitoring](monitoring.html)
