--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -32,7 +32,7 @@ The MicroBOSH deployment manifest is a YAML file that defines the components and
 
     <p class="note"><strong>Note</strong>: The example below has the file name <code>manifest.yml</code>, which we reference in other examples in this topic.</p>
 
-<pre class='code'>
+```yaml
 ---
 name: microbosh
 
@@ -56,10 +56,10 @@ cloud:
     aws:
       access_key_id: ACCESS-KEY-ID # Replace with your AWSAccessKeyId
       secret_access_key: SECRET-ACCESS-KEY # Replace with your AWSSecretKey
+      region: us-east-1
       default_key_name: bosh
       default_security_groups: ["bosh"]
-      region: us-east-1
-      ec2_private_key: bosh.pem # Path relative to the manifest file
+      ec2_private_key: ./bosh.pem # Path relative to this manifest file
 
 apply_spec:
   agent:
@@ -67,7 +67,7 @@ apply_spec:
     nats: {address: 10.0.0.6}
   properties:
     registry: {address: 10.0.0.6}
-</pre>
+```
 
 ---
 ##<a id="prepare-aws"></a>Step 2: Prepare an AWS Account ##
@@ -81,7 +81,7 @@ To configure your AWS account for MicroBOSH:
 * [Create a Key Pair](#create-key-pair)
 * [Create a Virtual Private Cloud](#create-vpc)
 * [Create an Elastic IP](#create-eip)
-* [Create and configure Security Groups](#create-security)
+* [Create and configure Security Group](#create-security)
 
 ###<a id="credentials"></a> Obtain AWS Credentials ###
 
@@ -220,7 +220,7 @@ Click **Yes, Allocate**.
 Elastic IP Address.
 
 ---
-###<a id="create-security"></a>Create and Configure Security Groups ###
+###<a id="create-security"></a>Create and Configure Security Group ###
 
 1. On the VPC Dashboard, click **Security Groups**.
 
@@ -242,7 +242,7 @@ Elastic IP Address.
 
 1. Click **Edit**.
 
-1. Add the rules below for access by MicroBOSH and BOSH.
+1. Add the inbound rules below for access by MicroBOSH.
 
     <table border="1" class="nice" >
     	<tr>
@@ -273,7 +273,7 @@ Elastic IP Address.
       message displays. You may have to refresh the page to view the updated inbound rules.</p>
 
 ---
-## <a id="download-stemcell"></a>Step 3: Download a BOSH Stemcell ##
+## <a id="download-stemcell"></a>Step 3: Download a Stemcell ##
 
 1. Install the [BOSH Command Line Interface (CLI)](./bosh-cli.html).
 
