link to network cloud properties

--- a/aws-cpi.html.md.erb
+++ b/aws-cpi.html.md.erb
@@ -34,6 +34,15 @@ networks:
     subnet: subnet-9be6c6gh
 ```
 
+Example of vip network:
+
+```yaml
+networks:
+- name: default
+  type: vip
+  cloud_properties: {}
+```
+
 ---
 ## <a id='resource-pools'></a> Resource pools
 
