--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -53,6 +53,12 @@ releases:
 
 See [networks](networks.html) for more details.
 
+### <a id='networks-cloud-properties'></a> CPI Specific `cloud_properties`
+
+- [See AWS CPI network cloud properties](aws-cpi.html#networks)
+- [See OpenStack CPI network cloud properties](openstack-cpi.html#networks)
+- [See vSphere CPI network cloud properties](vsphere-cpi.html#networks)
+
 ---
 ## <a id='resource-pools'></a>Resource Pools Block ##
 
