--- a/openstack-cpi.html.md.erb
+++ b/openstack-cpi.html.md.erb
@@ -36,6 +36,15 @@ networks:
     net_id: net-b98ab66e-6fae-4c6a-81af-566e630d21d1
 ```
 
+Example of vip network:
+
+```yaml
+networks:
+- name: default
+  type: vip
+  cloud_properties: {}
+```
+
 ---
 ## <a id='resource-pools'></a> Resource pools
 
