--- a/monitoring.html.md.erb
+++ b/monitoring.html.md.erb
@@ -26,7 +26,7 @@ See [Configuring Health Monitor](hm-config.html) for detailed plugins' configura
 
 Resurrector plugin continiously cross-references VMs expected to be running against the VMs that are sending heartbeats. When resurrector does not receive heartbeats for a VM for a certain period of time, it will kick off a task on the Director to try to "resurrect" that VM.
 
-See [Automatic repair with Resurrector](ressurrector.html) for details.
+See [Automatic repair with Resurrector](resurrector.html) for details.
 
 ---
 ## <a id="process"></a> Processes on VMs
