--- a/sample-manifest.html.md.erb
+++ b/sample-manifest.html.md.erb
@@ -4,21 +4,20 @@ title: Sample BOSH Deployment Manifest
 
 The following is a sample BOSH deployment manifest. See [Understanding the BOSH Deployment Manifest](./deployment-manifest.html) for an explanation of the manifest contents.
 
-<pre class='terminal'>
+```yaml
 ---
-name: sample-deployment
-
+name: my-redis-deployment
 director_uuid: 1234abcd-5678-efab-9012-3456cdef7890
 
 releases:
-- {name: go_sample, version: latest}
+- {name: redis, version: 12}
 
 resource_pools:
-- name: default
+- name: redis-servers
   network: default
   stemcell:
-    name: bosh-aws-xen-centos-go_agent
-    version: 2719
+    name: bosh-aws-xen-ubuntu-trusty-go_agent
+    version: 2708
   cloud_properties:
     instance_type: m1.small
     availability_zone: us-east-1c
@@ -38,41 +37,39 @@ networks:
       subnet: subnet-d597b993
 
 compilation:
-  reuse_compilation_vms: true
   workers: 2
   network: default
+  reuse_compilation_vms: true
   cloud_properties:
     instance_type: c1.medium
     availability_zone: us-east-1c
 
 update:
   canaries: 1
+  max_in_flight: 3
   canary_watch_time: 15000-30000
   update_watch_time: 15000-300000
-  max_in_flight: 3
 
 jobs:
-- name: sample
-  templates:
-  - {name: sample_with_properties, release: go_sample}
+- name: redis-master
   instances: 1
-  resource_pool: default
+  templates:
+  - {name: redis-server, release: redis}
+  persistent_disk: 10_240
+  resource_pool: redis-servers
   networks:
   - name: default
-  properties:
-    sample_with_properties:
-      output_value: 'custom value'
 
-- name: sample_errand
+- name: redis-slave
+  instances: 2
   templates:
-  - {name: sample_with_properties, release: sample}
-  instances: 1
-  resource_pool: default
+  - {name: redis-server, release: redis}
+  persistent_disk: 10_240
+  resource_pool: redis-servers
   networks:
   - name: default
 
 properties:
-  sample_with_properties:
-    output_value: 'I am stdout'
-    error_value: 'I am stderr'
-</pre>
+  redis:
+    max_connections: 10
+```
