--- a/deploying-step-by-step.html.md.erb
+++ b/deploying-step-by-step.html.md.erb
@@ -15,7 +15,7 @@ The Director will do the following steps when `bosh deploy` command runs:
     - if invalid, return an error to the user describing the problem(s)
 <br/><br/>
 1. Contact all existing VMs associated with this deployment to determine their network configuration, stemcell configuration, and job configuration if any
-    - if the Director cannot contact all VMs, return an error to the user. This results in a "Timed sending `get_state` error" during the 'Binding existing deployment' stage. At this point the operator is expected to use `bosh cck` command to determine why certain VMs are not accessible.
+    - if the Director cannot contact all VMs, return an error to the user. This results in a "Timed out sending `get_state` error" during the 'Binding existing deployment' stage. At this point the operator is expected to use `bosh cck` command to determine why certain VMs are not accessible.
 <br/><br/>
 1. Determine requested networking changes to the existing and new VMs
     - if network changes cannot be resolved (e.g. currently the Director does not support swapping of static IP reservations), return an error to the user
@@ -34,7 +34,7 @@ The Director will do the following steps when `bosh deploy` command runs:
     - issue create_vm CPI call
 <br/><br/>
 1. Determine release packages dependency graph and compile each package on compilation worker VMs
-    - issue compile_packages Agent call for each package
+    - issue compile_package Agent call for each package
 <br/><br/>
 1. Delete all compilation worker VMs
     - issue delete_vm CPI call
@@ -93,5 +93,5 @@ The Director will do the following steps when `bosh deploy` command runs:
         - issue start Agent call
         - issue get_state Agent call until job state is running or times out
 <br/><br/>
-1. Creates VMs explicitly requests empty VMs in each resource pool
+1. Creates empty VMs to fill remaining capacity of each resource pool
 <br/><br/>
