--- a/sysadmin-commands.html.md.erb
+++ b/sysadmin-commands.html.md.erb
@@ -2,8 +2,7 @@
 title: CLI Commands
 ---
 
-This document lists the all BOSH CLI commands you use to perform system
-administration tasks.
+This document lists the all CLI commands you use to perform system administration tasks.
 
 ---
 ## <a id="cluster-operators"></a> For Cluster Operators
