--- a/toc.html.md.erb
+++ b/toc.html.md.erb
@@ -23,9 +23,9 @@ title: Index
        * Heat template
     * [On vSphere](deploy-microbosh-to-vsphere.html)
        * Compatibility
+    * On vCloud
     * [On Local machine using BOSH Lite](bosh-lite.html)
- * BOSH (micro) deploy step-by-step
-    * [explanation of every step of the `bosh (micro) deploy` command]
+ * BOSH micro deploy step-by-step
 
 ### Advanced BOSH configuration
 
